--- a/.github/workflows/flight_check.yml
+++ b/.github/workflows/flight_check.yml
@@ -1,61 +1,35 @@
-name: Flight price checker
+name: Cheapest Flight Finder
 
 on:
     schedule:
-        # runs daily at 08:00 UTC (adjust as needed). To run at 00:00 SGT (UTC+8) use '0 16 * * *'
+        # Runs every day at 08:00 UTC (adjust if needed)
         - cron: "0 8 * * *"
-    workflow_dispatch: {} # allows manual runs from the Actions tab
+    workflow_dispatch: # lets you run it manually from GitHub
 
 jobs:
-    check_flights:
+    run-script:
         runs-on: ubuntu-latest
+        permissions:
+            contents: read # no write needed, avoids the 403 error
         steps:
-            - name: Checkout repository
+            - name: Checkout code
               uses: actions/checkout@v4
-              with:
-                  fetch-depth: 0
-                  persist-credentials: true
 
             - name: Set up Python
-              uses: actions/setup-python@v4
+              uses: actions/setup-python@v5
               with:
-                  python-version: "3.10"
+                  python-version: "3.11"
 
             - name: Install dependencies
               run: |
                   python -m pip install --upgrade pip
                   pip install -r requirements.txt
 
-            - name: Run flight checker
+            - name: Run script
               env:
                   AMADEUS_CLIENT_ID: ${{ secrets.AMADEUS_CLIENT_ID }}
                   AMADEUS_CLIENT_SECRET: ${{ secrets.AMADEUS_CLIENT_SECRET }}
                   TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
                   TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-                  ORIGIN: ${{ secrets.ORIGIN }}
-                  DEPART_DATE: ${{ secrets.DEPART_DATE }}
-                  RETURN_DATE: ${{ secrets.RETURN_DATE }}
               run: |
                   python cheapest_flight_finder.py
-
-            - name: Commit & push flights.db (persistence)
-              # This will add flights.db to the repository (created by the script) so the DB persists.
-              run: |
-                  git config user.name "github-actions[bot]"
-                  git config user.email "github-actions[bot]@users.noreply.github.com"
-                  # ensure we are on the branch that triggered the workflow
-                  git checkout $GITHUB_REF_NAME || true
-                  # Add DB if exists
-                  if [ -f "flights.db" ]; then
-                    git add flights.db
-                    if [ -n "$(git status --porcelain)" ]; then
-                      git commit -m "Update flights.db from GitHub Actions run $(date -u +"%Y-%m-%d %H:%M:%SZ")" || echo "commit failed"
-                      git push origin HEAD:${{ github.ref_name }}
-                    else
-                      echo "No DB changes to commit"
-                    fi
-                  else
-                    echo "No flights.db found; nothing to persist"
-                  fi
-permissions:
-    contents: write # to allow pushing the DB file back to the repo
